gen/japaitonParser.java
// Generated from D:/Vou trabalhar na Nuuvem/Java/japaiton/src\japaiton.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class japaitonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, INT=4, FLOAT=5, STR=6, BOOL=7, VOID=8, IF=9, ELSE=10, 
		WHILE=11, CONST=12, VAR=13, END=14, RETURN=15, PRINT=16, SCANF=17, INTEGER=18, 
		FLOAT_NUMBER=19, STRING=20, BOOLEAN=21, ID=22, EQUAL=23, LPAREN=24, RPAREN=25, 
		COMMA=26, SEMICOLON=27, COLON=28, PLUS=29, MINUS=30, ASTERISK=31, SLASH=32, 
		EQUALS=33, NOTEQUALS=34, GREATEREQUAL=35, LESSEQUAL=36, GREATER=37, LESS=38, 
		NOT=39, WHITESPACE=40, COMMENT=41;
	public static final int
		RULE_programa = 0, RULE_main = 1, RULE_funcao = 2, RULE_parametros = 3, 
		RULE_parametro = 4, RULE_escopo = 5, RULE_blocoDeCodigo = 6, RULE_returnDeclaracao = 7, 
		RULE_variaveis = 8, RULE_declaracaoVariavel = 9, RULE_listaVariaveis = 10, 
		RULE_atribuicaoVariavel = 11, RULE_atribuicaoMultiplaVariaveis = 12, RULE_atribuicaoValorVariavel = 13, 
		RULE_declaracaoConstante = 14, RULE_listaConstantes = 15, RULE_atribuicaoConstante = 16, 
		RULE_valorConstante = 17, RULE_ifDeclaracao = 18, RULE_ifElseDeclaracao = 19, 
		RULE_whileDeclaracao = 20, RULE_printDeclaracao = 21, RULE_printParametros = 22, 
		RULE_scanfDeclaracao = 23, RULE_listaIDs = 24, RULE_idOrString = 25, RULE_expressoesDeclaracao = 26, 
		RULE_listaExpressoes = 27, RULE_condicao = 28, RULE_expressoes = 29, RULE_expressaoString = 30, 
		RULE_expressaoLogica = 31, RULE_operadoresLogicos = 32, RULE_expressaoIgualdade = 33, 
		RULE_operadorIgualdade = 34, RULE_expressaoRelacional = 35, RULE_operadorGrandeza = 36, 
		RULE_expressaoGrandeza = 37, RULE_operadorAditivo = 38, RULE_expressaoMultiplicativa = 39, 
		RULE_operadorMultiplicativo = 40, RULE_expressaoNegativa = 41, RULE_operadorNegacao = 42, 
		RULE_expressaoPrimaria = 43, RULE_chamadaFuncao = 44, RULE_listaArgumentos = 45, 
		RULE_type = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "main", "funcao", "parametros", "parametro", "escopo", "blocoDeCodigo", 
			"returnDeclaracao", "variaveis", "declaracaoVariavel", "listaVariaveis", 
			"atribuicaoVariavel", "atribuicaoMultiplaVariaveis", "atribuicaoValorVariavel", 
			"declaracaoConstante", "listaConstantes", "atribuicaoConstante", "valorConstante", 
			"ifDeclaracao", "ifElseDeclaracao", "whileDeclaracao", "printDeclaracao", 
			"printParametros", "scanfDeclaracao", "listaIDs", "idOrString", "expressoesDeclaracao", 
			"listaExpressoes", "condicao", "expressoes", "expressaoString", "expressaoLogica", 
			"operadoresLogicos", "expressaoIgualdade", "operadorIgualdade", "expressaoRelacional", 
			"operadorGrandeza", "expressaoGrandeza", "operadorAditivo", "expressaoMultiplicativa", 
			"operadorMultiplicativo", "expressaoNegativa", "operadorNegacao", "expressaoPrimaria", 
			"chamadaFuncao", "listaArgumentos", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'AND'", "'OR'", "'int'", "'float'", "'str'", "'bool'", 
			"'void'", "'if'", "'else'", "'while'", "'const'", "'var'", "'end'", "'return'", 
			"'print'", "'scanf'", null, null, null, null, null, "'='", "'('", "')'", 
			"','", "';'", "':'", "'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'>='", 
			"'<='", "'>'", "'<'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "INT", "FLOAT", "STR", "BOOL", "VOID", "IF", 
			"ELSE", "WHILE", "CONST", "VAR", "END", "RETURN", "PRINT", "SCANF", "INTEGER", 
			"FLOAT_NUMBER", "STRING", "BOOLEAN", "ID", "EQUAL", "LPAREN", "RPAREN", 
			"COMMA", "SEMICOLON", "COLON", "PLUS", "MINUS", "ASTERISK", "SLASH", 
			"EQUALS", "NOTEQUALS", "GREATEREQUAL", "LESSEQUAL", "GREATER", "LESS", 
			"NOT", "WHITESPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "japaiton.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public japaitonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FuncaoContext> funcao() {
			return getRuleContexts(FuncaoContext.class);
		}
		public FuncaoContext funcao(int i) {
			return getRuleContext(FuncaoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(94);
				funcao();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(japaitonParser.COLON, 0); }
		public EscopoContext escopo() {
			return getRuleContext(EscopoContext.class,0);
		}
		public TerminalNode END() { return getToken(japaitonParser.END, 0); }
		public VariaveisContext variaveis() {
			return getRuleContext(VariaveisContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__0);
			setState(103);
			match(COLON);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(104);
				variaveis();
				}
			}

			setState(107);
			escopo();
			setState(108);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(japaitonParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(japaitonParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(japaitonParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(japaitonParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public EscopoContext escopo() {
			return getRuleContext(EscopoContext.class,0);
		}
		public TerminalNode END() { return getToken(japaitonParser.END, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public VariaveisContext variaveis() {
			return getRuleContext(VariaveisContext.class,0);
		}
		public FuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitFuncao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitFuncao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncaoContext funcao() throws RecognitionException {
		FuncaoContext _localctx = new FuncaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(ID);
			setState(111);
			match(LPAREN);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 496L) != 0)) {
				{
				setState(112);
				parametros();
				}
			}

			setState(115);
			match(RPAREN);
			setState(116);
			match(COLON);
			setState(117);
			type();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(118);
				variaveis();
				}
			}

			setState(121);
			escopo();
			setState(122);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(japaitonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(japaitonParser.COMMA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitParametros(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitParametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			parametro();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(125);
				match(COMMA);
				setState(126);
				parametro();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(japaitonParser.ID, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitParametro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitParametro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			type();
			setState(133);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscopoContext extends ParserRuleContext {
		public List<BlocoDeCodigoContext> blocoDeCodigo() {
			return getRuleContexts(BlocoDeCodigoContext.class);
		}
		public BlocoDeCodigoContext blocoDeCodigo(int i) {
			return getRuleContext(BlocoDeCodigoContext.class,i);
		}
		public EscopoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escopo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterEscopo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitEscopo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitEscopo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscopoContext escopo() throws RecognitionException {
		EscopoContext _localctx = new EscopoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_escopo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4426240L) != 0)) {
				{
				{
				setState(135);
				blocoDeCodigo();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoDeCodigoContext extends ParserRuleContext {
		public IfDeclaracaoContext ifDeclaracao() {
			return getRuleContext(IfDeclaracaoContext.class,0);
		}
		public IfElseDeclaracaoContext ifElseDeclaracao() {
			return getRuleContext(IfElseDeclaracaoContext.class,0);
		}
		public WhileDeclaracaoContext whileDeclaracao() {
			return getRuleContext(WhileDeclaracaoContext.class,0);
		}
		public AtribuicaoValorVariavelContext atribuicaoValorVariavel() {
			return getRuleContext(AtribuicaoValorVariavelContext.class,0);
		}
		public PrintDeclaracaoContext printDeclaracao() {
			return getRuleContext(PrintDeclaracaoContext.class,0);
		}
		public ScanfDeclaracaoContext scanfDeclaracao() {
			return getRuleContext(ScanfDeclaracaoContext.class,0);
		}
		public ReturnDeclaracaoContext returnDeclaracao() {
			return getRuleContext(ReturnDeclaracaoContext.class,0);
		}
		public BlocoDeCodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocoDeCodigo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterBlocoDeCodigo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitBlocoDeCodigo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitBlocoDeCodigo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoDeCodigoContext blocoDeCodigo() throws RecognitionException {
		BlocoDeCodigoContext _localctx = new BlocoDeCodigoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_blocoDeCodigo);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				ifDeclaracao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				ifElseDeclaracao();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				whileDeclaracao();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				atribuicaoValorVariavel();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(145);
				printDeclaracao();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(146);
				scanfDeclaracao();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(147);
				returnDeclaracao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnDeclaracaoContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(japaitonParser.RETURN, 0); }
		public ExpressoesDeclaracaoContext expressoesDeclaracao() {
			return getRuleContext(ExpressoesDeclaracaoContext.class,0);
		}
		public ReturnDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterReturnDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitReturnDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitReturnDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnDeclaracaoContext returnDeclaracao() throws RecognitionException {
		ReturnDeclaracaoContext _localctx = new ReturnDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnDeclaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(RETURN);
			setState(151);
			expressoesDeclaracao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariaveisContext extends ParserRuleContext {
		public DeclaracaoVariavelContext declaracaoVariavel() {
			return getRuleContext(DeclaracaoVariavelContext.class,0);
		}
		public BlocoDeCodigoContext blocoDeCodigo() {
			return getRuleContext(BlocoDeCodigoContext.class,0);
		}
		public VariaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterVariaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitVariaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitVariaveis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariaveisContext variaveis() throws RecognitionException {
		VariaveisContext _localctx = new VariaveisContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variaveis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			declaracaoVariavel();
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(154);
				blocoDeCodigo();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoVariavelContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(japaitonParser.VAR, 0); }
		public TerminalNode COLON() { return getToken(japaitonParser.COLON, 0); }
		public List<ListaVariaveisContext> listaVariaveis() {
			return getRuleContexts(ListaVariaveisContext.class);
		}
		public ListaVariaveisContext listaVariaveis(int i) {
			return getRuleContext(ListaVariaveisContext.class,i);
		}
		public DeclaracaoVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoVariavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).enterDeclaracaoVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof japaitonListener ) ((japaitonListener)listener).exitDeclaracaoVariavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof japaitonVisitor ) return ((japaitonVisitor<? extends T>)visitor).visitDeclaracaoVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoVariavelContext declaracaoVariavel() throws RecognitionException {
		DeclaracaoVariavelContext _localctx = new DeclaracaoVariavelContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaracaoVariavel);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(VAR);
			setState(158);
			match(COLON);
			setState(162);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(159);
					listaVariaveis();
					}
					} 
				}
				setState(164);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
